--- a/kyokuto1sample/kyokuto1sample/kyokuto1sample.csproj
+++ b/kyokuto1sample/kyokuto1sample/kyokuto1sample.csproj
@@ -67,6 +67,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constant.cs" />
+    <Compile Include="CS_Util.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
