--- a/kyokuto1sample/kyokuto1sample/kyokuto1sample.csproj
+++ b/kyokuto1sample/kyokuto1sample/kyokuto1sample.csproj
@@ -92,6 +92,7 @@
     <None Include="client1sampl.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="kyokuto1SA.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
