--- a/kyokuto1sample/kyokuto1sample/kyokuto1sample.csproj
+++ b/kyokuto1sample/kyokuto1sample/kyokuto1sample.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GoogleUtil.cs" />
     <Compile Include="LocalFileUtil.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
