コンテキストとリリースビルド

--- a/kyokuto1sample/kyokuto1sample/kyokuto1sample.csproj
+++ b/kyokuto1sample/kyokuto1sample/kyokuto1sample.csproj
@@ -95,6 +95,7 @@
     <None Include="client1sampl.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="credentials0429.json" />
     <None Include="kyokuto1SA.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
