--- a/kyokuto4calender/kyokuto4calender/kyokuto4calender/kyokuto4calender.csproj
+++ b/kyokuto4calender/kyokuto4calender/kyokuto4calender/kyokuto4calender.csproj
@@ -86,7 +86,13 @@
     </Compile>
     <Compile Include="GoogleAuthUtil.cs" />
     <Compile Include="GoogleCalendarUtil.cs" />
-    <Compile Include="GoogleUtil.cs" />
+    <Compile Include="GoogleDriveBrouser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GoogleDriveBrouser.Designer.cs">
+      <DependentUpon>GoogleDriveBrouser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GoogleDriveUtil.cs" />
     <Compile Include="LocalFileUtil.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GoogleDriveBrouser.resx">
+      <DependentUpon>GoogleDriveBrouser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
