カレンダーとドライブのoauth分離

--- a/kyokuto4calender/kyokuto4calender/kyokuto4calender/kyokuto4calender.csproj
+++ b/kyokuto4calender/kyokuto4calender/kyokuto4calender/kyokuto4calender.csproj
@@ -117,6 +117,12 @@
     <None Include="calender_oauth.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="oauth_calender.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="oauth_drive.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="drive_oauth.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
