--- a/kyokuto4calender/kyokuto4calender/kyokuto4calender/kyokuto4calender.csproj
+++ b/kyokuto4calender/kyokuto4calender/kyokuto4calender/kyokuto4calender.csproj
@@ -95,6 +95,9 @@
     <Compile Include="GoogleDriveUtil.cs" />
     <Compile Include="LocalFileUtil.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProgressForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Edit.resx">
       <DependentUpon>Edit.cs</DependentUpon>
