--- a/KGSample/KGSample/KGSample/KGSample.csproj
+++ b/KGSample/KGSample/KGSample/KGSample.csproj
@@ -108,6 +108,10 @@
     </ApplicationDefinition>
     <Compile Include="Constant.cs" />
     <Compile Include="CS_Util.cs" />
+    <Compile Include="GoogleAuthUtil.cs" />
+    <Compile Include="GoogleCalendarUtil.cs" />
+    <Compile Include="GoogleDriveUtil.cs" />
+    <Compile Include="LocalFileUtil.cs" />
     <Compile Include="Style\StyleDic.xaml.cs">
       <DependentUpon>StyleDic.xaml</DependentUpon>
     </Compile>
