ファイル選択：添付処理

--- a/KGSample/KGSample/KGSample/KGSample.csproj
+++ b/KGSample/KGSample/KGSample/KGSample.csproj
@@ -218,5 +218,9 @@
   <ItemGroup>
     <Resource Include="Resources\circle.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\file.png" />
+    <Resource Include="Resources\folder.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
