--- a/KGSample/KGSample/KGSample.csproj
+++ b/KGSample/KGSample/KGSample.csproj
@@ -94,6 +94,9 @@
     <Compile Include="GEventEdit.xaml.cs">
       <DependentUpon>GEventEdit.xaml</DependentUpon>
     </Compile>
+    <Compile Include="GoogleAuth.xaml.cs">
+      <DependentUpon>GoogleAuth.xaml</DependentUpon>
+    </Compile>
     <Compile Include="GoogleAuthUtil.cs" />
     <Compile Include="GoogleCalendarUtil.cs" />
     <Compile Include="GoogleDriveBrouser.xaml.cs">
@@ -128,6 +131,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="GEventEdit.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GoogleAuth.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
