DataGridにデータ書き込み

--- a/googleOSD/googleOSD/googleOSD/googleOSD.csproj
+++ b/googleOSD/googleOSD/googleOSD/googleOSD.csproj
@@ -79,6 +79,7 @@
     </ApplicationDefinition>
     <Compile Include="AddInfo.cs" />
     <Compile Include="AriadneData.cs" />
+    <Compile Include="AttachmentData.cs" />
     <Compile Include="Constant.cs" />
     <Compile Include="CS_Util.cs" />
     <Compile Include="DateInfo.cs" />
