プログレスもどき

--- a/googleOSD/googleOSD/googleOSD/GoogleOSD.csproj
+++ b/googleOSD/googleOSD/googleOSD/GoogleOSD.csproj
@@ -71,6 +71,7 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -203,7 +204,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Company.mdf</DependentUpon>
     </Content>
-    <Resource Include="Resources\DarsBar.gif" />
+    <None Include="Resources\DarsBar.gif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.1">
