--- a/googleOSD/googleOSD/googleOSD/GoogleOSD.csproj
+++ b/googleOSD/googleOSD/googleOSD/GoogleOSD.csproj
@@ -79,12 +79,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AddInfo.cs" />
-    <Compile Include="AnimeGifView.xaml.cs">
-      <DependentUpon>AnimeGifView.xaml</DependentUpon>
-    </Compile>
     <Compile Include="AriadneData.cs" />
     <Compile Include="AttachmentData.cs" />
     <Compile Include="Constant.cs" />
+    <Compile Include="Controls\WaitingDLog.xaml.cs">
+      <DependentUpon>WaitingDLog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CS_Util.cs" />
     <Compile Include="DateInfo.cs" />
     <Compile Include="GAttachFile.cs" />
@@ -107,9 +107,6 @@
     <Compile Include="LocalFileUtil.cs" />
     <Compile Include="MonthInfo.cs" />
     <Compile Include="OtherData.cs" />
-    <Compile Include="ProgressDialog.xaml.cs">
-      <DependentUpon>ProgressDialog.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Settings.cs" />
     <Compile Include="Style\StyleDic.xaml.cs">
       <DependentUpon>StyleDic.xaml</DependentUpon>
@@ -118,13 +115,13 @@
       <DependentUpon>TimePic.xaml</DependentUpon>
     </Compile>
     <Compile Include="TreeViewModel.cs" />
-    <Compile Include="WaitingCircle.xaml.cs">
+    <Compile Include="Controls\WaitingCircle.xaml.cs">
       <DependentUpon>WaitingCircle.xaml</DependentUpon>
     </Compile>
     <Compile Include="WebWindow.xaml.cs">
       <DependentUpon>WebWindow.xaml</DependentUpon>
     </Compile>
-    <Page Include="AnimeGifView.xaml">
+    <Page Include="Controls\WaitingDLog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -163,10 +160,6 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="ProgressDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Style\StyleDic.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -175,7 +168,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="WaitingCircle.xaml">
+    <Page Include="Controls\WaitingCircle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
