--- a/googleOSD/googleOSD/googleOSD/GoogleOSD.csproj
+++ b/googleOSD/googleOSD/googleOSD/GoogleOSD.csproj
@@ -56,6 +56,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -81,6 +83,9 @@
     <Compile Include="AddInfo.cs" />
     <Compile Include="AriadneData.cs" />
     <Compile Include="AttachmentData.cs" />
+    <Compile Include="Company.cs">
+      <DependentUpon>ScedModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Constant.cs" />
     <Compile Include="Controls\WaitingDLog.xaml.cs">
       <DependentUpon>WaitingDLog.xaml</DependentUpon>
@@ -107,6 +112,21 @@
     <Compile Include="LocalFileUtil.cs" />
     <Compile Include="MonthInfo.cs" />
     <Compile Include="OtherData.cs" />
+    <Compile Include="ScedModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ScedModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ScedModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ScedModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ScedModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ScedModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Settings.cs" />
     <Compile Include="Style\StyleDic.xaml.cs">
       <DependentUpon>StyleDic.xaml</DependentUpon>
@@ -117,6 +137,9 @@
     <Compile Include="TreeViewModel.cs" />
     <Compile Include="Controls\WaitingCircle.xaml.cs">
       <DependentUpon>WaitingCircle.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="t_events.cs">
+      <DependentUpon>ScedModel.tt</DependentUpon>
     </Compile>
     <Compile Include="WebWindow.xaml.cs">
       <DependentUpon>WebWindow.xaml</DependentUpon>
@@ -199,6 +222,13 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <EntityDeploy Include="ScedModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ScedModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="ScedModel.edmx.diagram">
+      <DependentUpon>ScedModel.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -210,6 +240,16 @@
     <Content Include="Company_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Company.mdf</DependentUpon>
+    </Content>
+    <Content Include="ScedModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ScedModel.edmx</DependentUpon>
+      <LastGenOutput>ScedModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="ScedModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ScedModel.edmx</DependentUpon>
+      <LastGenOutput>ScedModel.cs</LastGenOutput>
     </Content>
     <None Include="Resources\DarsBar.gif">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -228,6 +268,12 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="EntityFramework">
+      <Version>6.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="EntityFramework.ja">
+      <Version>6.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Google.Apis.Calendar.v3">
       <Version>1.46.0.1986</Version>
     </PackageReference>
@@ -241,6 +287,8 @@
       <Version>12.0.3</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
