エンティティ作成前

--- a/googleOSD/googleOSD/googleOSD/Properties/Settings.settings
+++ b/googleOSD/googleOSD/googleOSD/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="googleOSD.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="GoogleOSD.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="companyId" Type="System.String" Scope="User">
@@ -30,6 +30,12 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="auth_providerX509CertUrl" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="redirectUris" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AriadneDataFolder" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
