--- a/googleOSD/googleOSD/googleOSD/GoogleOSD.csproj
+++ b/googleOSD/googleOSD/googleOSD/GoogleOSD.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7DA786F8-A377-4E1E-AA95-7E279F3F9587}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>googleOSD</RootNamespace>
-    <AssemblyName>googleOSD</AssemblyName>
+    <RootNamespace>GoogleOSD</RootNamespace>
+    <AssemblyName>GoogleOSD</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
